--- a/Uno Flip!/uno-flip.csproj
+++ b/Uno Flip!/uno-flip.csproj
@@ -13,6 +13,7 @@
     <PublishDir>/home/lostya/projects/school/c#/uno-flip/releases</PublishDir>
     <DebugType Condition="'$(Configuration)'=='Release'">none</DebugType>
     <DebugType Condition="'$(Configuration)'=='Debug'">portable</DebugType>
+    <AssemblyName>uno-flip</AssemblyName>
   </PropertyGroup>
 
 </Project>
