hope it does now

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,5 +28,5 @@ jobs:
           files: |
             releases/uno-flip-linux
             releases/uno-flip.exe
-          draft: true    # mark as draft to make reviewable before made available
+          #draft: true    # mark as draft to make reviewable before made available
           make_latest: true
