--- a/uno-flip/uno-flip.csproj
+++ b/uno-flip/uno-flip.csproj
@@ -10,7 +10,7 @@
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
     <PublishTrimmed>true</PublishTrimmed>
-    <PublishDir>/home/lostya/projects/school/c#/uno-flip/releases</PublishDir>
+    <PublishDir>../releases</PublishDir>
     <DebugType Condition="'$(Configuration)'=='Release'">none</DebugType>
     <DebugType Condition="'$(Configuration)'=='Debug'">portable</DebugType>
     <AssemblyName>uno-flip</AssemblyName>
